--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <a href="https://t.me/trollface_imperia">тгк</a>
         <a href="https://www.tiktok.com/@jdjdudhsusus">дiл док</a>
     </div>
+
+    <div class="footer">
+        <p>© DimaTorzok</p>
+    </div>
 </body>
 
 </html>
