--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="content">
         <img src="avatar.jpg" width=150 />
 
-        <h1>согласен 🇻🇳🇱🇮🇸🇴</h1>
-        <p>respect to the Vietnamese patriot 😳😳😳😳🇻🇳🇻🇳☝🏿☝🏿☝🏿☝🏿🧨</p>
+        <h1>согласен<br>🇻🇳🇱🇮🇸🇴</h1>
+        <p>respect to the Vietnamese patriot<br>😳😳😳😳🇻🇳🇻🇳☝🏿☝🏿☝🏿☝🏿🧨</p>
         <a href="https://t.me/trollface_imperia">тгк</a>
         <a href="https://www.tiktok.com/@jdjdudhsusus">дiл док</a>
     </div>
